syntax = "proto3";

option go_package = "github.com/go-clarum/agent/interface/grpc/agent/internal/api/commands/cmd";

package cmd;

message InitEndpointCommand {
  string name = 1;
  int32 warmup_millis = 2;
  repeated string cmd_components = 3;
}
message InitEndpointResult {
  string error = 1;
}

message ShutdownEndpointCommand {
  string name = 1;
}
message ShutdownEndpointResult {
  string error = 1;
}
