syntax = "proto3";

option go_package = "github.com/go-clarum/agent/interface/grpc/agent/internal/api/commands/http";

package http;

message InitClientCommand {
  string name = 1;
  string base_url = 2;
  string content_type = 3;
  int32 timeout_seconds = 4;
}
message InitClientResult {
  string error = 1;
}

message InitServerCommand {
  string name = 1;
  int32 port = 2;
  string content_type = 3;
  int32 timeout_seconds = 4;
}
message InitServerResult {
  string error = 1;
}

message ClientSendActionCommand {
  string name = 1;
  string url = 2;
  repeated string path = 3;
  string method = 4;
  map<string, StringsList> query_params = 5;
  map<string, string> headers = 6;
  string payload = 7;
  string endpoint_name = 8;
}
message ClientSendActionResult {
  string error = 1;
}

message ClientReceiveActionCommand {
  string name = 1;
  PayloadType payloadType = 2;
  int32 statusCode = 3;
  map<string, string> headers = 4;
  string payload = 5;
  string endpointName = 6;
}
message ClientReceiveActionResult {
  string error = 1;
}

message ServerSendActionCommand {
  string name = 1;
  int32 statusCode = 2;
  map<string, string> headers = 3;
  string payload = 4;
  string endpointName = 5;
}
message ServerSendActionResult {
  string error = 1;
}

message ServerReceiveActionCommand {
  string name = 1;
  string url = 2;
  repeated string path = 3;
  string method = 4;
  map<string, StringsList> query_params = 5;
  map<string, string> headers = 6;
  string payload = 7;
  PayloadType payloadType = 8;
  string endpointName = 9;
}
message ServerReceiveActionResult {
  string error = 1;
}

// Types

message StringsList {
  repeated string values = 1;
}

enum PayloadType {
  Plaintext = 0;
  Json = 1;
}
